err/havaiana.err
Listing '.'...
Listing './bin'...
Compiling './bin/pygal_gen.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Havaiana-2.6.2.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Ojota-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/WTForms-2.1.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_paginate'...
Listing './lib/python3.5/site-packages/flask_paginate-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/havaiana'...
Listing './lib/python3.5/site-packages/havaiana/templates'...
Listing './lib/python3.5/site-packages/havaiana/templates/static'...
Listing './lib/python3.5/site-packages/havaiana/templates/static/bootstrap'...
Listing './lib/python3.5/site-packages/havaiana/templates/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/havaiana/templates/static/bootstrap/img'...
Listing './lib/python3.5/site-packages/havaiana/templates/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/ojota'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygal'...
Listing './lib/python3.5/site-packages/pygal/css'...
Listing './lib/python3.5/site-packages/pygal/graph'...
Listing './lib/python3.5/site-packages/pygal/maps'...
Listing './lib/python3.5/site-packages/pygal/test'...
Listing './lib/python3.5/site-packages/pygal-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/wtforms'...
Listing './lib/python3.5/site-packages/wtforms/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext'...
Listing './lib/python3.5/site-packages/wtforms/ext/appengine'...
Listing './lib/python3.5/site-packages/wtforms/ext/csrf'...
Listing './lib/python3.5/site-packages/wtforms/ext/dateutil'...
Listing './lib/python3.5/site-packages/wtforms/ext/django'...
Listing './lib/python3.5/site-packages/wtforms/ext/django/templatetags'...
Listing './lib/python3.5/site-packages/wtforms/ext/i18n'...
Listing './lib/python3.5/site-packages/wtforms/ext/sqlalchemy'...
Listing './lib/python3.5/site-packages/wtforms/fields'...
Listing './lib/python3.5/site-packages/wtforms/locale'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar'...
Listing './lib/python3.5/site-packages/wtforms/locale/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca'...
Listing './lib/python3.5/site-packages/wtforms/locale/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ'...
Listing './lib/python3.5/site-packages/wtforms/locale/cs_CZ/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy'...
Listing './lib/python3.5/site-packages/wtforms/locale/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de'...
Listing './lib/python3.5/site-packages/wtforms/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH'...
Listing './lib/python3.5/site-packages/wtforms/locale/de_CH/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/el'...
Listing './lib/python3.5/site-packages/wtforms/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/en'...
Listing './lib/python3.5/site-packages/wtforms/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/es'...
Listing './lib/python3.5/site-packages/wtforms/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/et'...
Listing './lib/python3.5/site-packages/wtforms/locale/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa'...
Listing './lib/python3.5/site-packages/wtforms/locale/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr'...
Listing './lib/python3.5/site-packages/wtforms/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/it'...
Listing './lib/python3.5/site-packages/wtforms/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja'...
Listing './lib/python3.5/site-packages/wtforms/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko'...
Listing './lib/python3.5/site-packages/wtforms/locale/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb'...
Listing './lib/python3.5/site-packages/wtforms/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl'...
Listing './lib/python3.5/site-packages/wtforms/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl'...
Listing './lib/python3.5/site-packages/wtforms/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt'...
Listing './lib/python3.5/site-packages/wtforms/locale/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru'...
Listing './lib/python3.5/site-packages/wtforms/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk'...
Listing './lib/python3.5/site-packages/wtforms/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW'...
Listing './lib/python3.5/site-packages/wtforms/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/wtforms/widgets'...
Listing './share'...
Listing './share/python-wheels'...
